Adding subsurf prior to particle system breaks simple children vgroups and textures #54078

Closed
opened 2018-02-15 10:26:11 +01:00 by Sergey Sharybin · 3 comments

System Information

Doesn't matter, will happen on any system.

But for the record, Linux 64bit, NVidia GPU.

Blender Version

Broken: 2.79 release and c8e6617
Worked: Probably never.

Short description of error

Wrong mapping is done from simple children to dm_final face. Which means, it is not possible to control simple children with neither texture nor vertex group.

Exact steps for others to reproduce the error

Open attached .blend files, move Subsurf modifier prior to particles.

Surely, exact look of hair strand is expected to change (different face index, different RNG etc). but vgroup and texture are expected to have control over roughness.

particle_simple_child_texture.blend particle_simple_child_vgroup.blend

**System Information** Doesn't matter, will happen on any system. But for the record, Linux 64bit, NVidia GPU. **Blender Version** Broken: 2.79 release and c8e6617 Worked: Probably never. **Short description of error** Wrong mapping is done from simple children to dm_final face. Which means, it is not possible to control simple children with neither texture nor vertex group. **Exact steps for others to reproduce the error** Open attached .blend files, move Subsurf modifier prior to particles. Surely, exact look of hair strand is expected to change (different face index, different RNG etc). but vgroup and texture are expected to have control over roughness. [particle_simple_child_texture.blend](https://archive.blender.org/developer/F2285446/particle_simple_child_texture.blend) [particle_simple_child_vgroup.blend](https://archive.blender.org/developer/F2285452/particle_simple_child_vgroup.blend)
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2018-02-15 10:26:53 +01:00

This issue was referenced by 5ce6ca0536

This issue was referenced by 5ce6ca05366e653cc576ac6beaed72d07c0e2e6c
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54078
No description provided.